css/main.css
/* Universals
============================================================================ */

html, body {
	margin: 0px;
	padding: 0px;
	-webkit-font-smoothing: antialiased;
}

body {
	background: #000f23;
	font: 19px/25px 'Avenir Book', 'Helvetica', sans-serif;
}

a {
	text-decoration: none;
}


/* Structure
============================================================================ */

div#top-sections-container {
	background: #071f41 url('../images/background-pattern-with-background-color.gif') top center repeat;
}

	div#top-sections {
		background: url('../images/background-radial-60-percent-opacity.png') top center no-repeat;
		padding: 0px 0px 60px 0px;
	}

		header {
			background: rgba(3, 16, 35, 0.12);
			height: 68px;
			width: 100%;
		}


/* Header
============================================================================ */

header ul {
	list-style: none;
	margin: 0px auto;
	padding: 0px;
	width: 100%;
}

	header li {
		display: block;
		float: left;
	}

		header li a {
			color: #4480b3;
			display: inline-block;
			font: normal 14px/68px 'Avenir Heavy', 'Helvetica', sans-serif;
			text-decoration: none;
			text-transform: uppercase;
		}

			header li.selected a {
				color: #c6ddf1;
			}

			header li a.home { width: 90px; }
			header li a.about-us { width: 115px; }
			header li a.our-people { width: 130px; }
			header li a.our-work { width: 120px; }
			header li a.outreach-and-impacts { width: 195px; }
			header li a.events-and-programs { width: 190px; }
			header li a.news { width: 85px; }
			header li a.contact { width: 90px; }

/* Content
============================================================================ */

#content a {
	text-decoration: underline;
}

